# flask_example

./: Procfile  pyproject.toml  wsgi.py
src/flask_app/: hello_world.py
