[tool.poetry]
name = "flask_example"
version = "0.1.0"
description = "Example project for Heroku"
authors = ["Ryan Davis <ryandavis7@isu.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.3"
pytest = "^7.0.1"
pytest-mock = "^3.7.0"
mock = "^4.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
